<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextBatchName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ten_dot_kiem_kho" />

    <EditText
        android:id="@+id/editTextCreator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nguoi_tao" />
    <TextView
        android:id="@+id/textViewError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonSaveBatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luu"/>
</LinearLayout>