<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextOrderCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ma_don_hang"/>

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/so_luong"/>
    <TextView
        android:id="@+id/textViewError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />
    <Button
        android:id="@+id/buttonSaveItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luu_mat_hang"/>
</LinearLayout>